--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsv-print-client",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "RSV Printing Client",
   "main": "src/main.js",
   "scripts": {
@@ -37,9 +37,8 @@
       "target": "nsis"
     },
     "nsis": {
-      "oneClick": false,
-      "perMachine": true,
-      "allowToChangeInstallationDirectory": true
+      "oneClick": true,
+      "perMachine": true
     },
     "publish": [
       {
